# CuttingTool

./: .gitignore  AGENTS.md  BEGINNER_GUIDE.md  CHANGELOG.md  HANDOFF.md  README.md  pyproject.toml
input/: README.md
output/xiuxian-ui-1980x1080-v1/: jobs.json  request.json  supplemental-manifest.json
output/xiuxian-ui-1980x1080-v1/extracted/: button-sheet-01-manifest.json  button-sheet-02-manifest.json  button-sheet-03-manifest.json  icon-effect-sheet-01-manifest.json  icon-nav-sheet-01-manifest.json  icon-nav-sheet-02-manifest.json  icon-status-sheet-01-manifest.json  panel-sheet-01-manifest.json  panel-sheet-02-manifest.json  panel-sheet-03-manifest.json
output/xiuxian-ui-1980x1080-v1/final/: manifest.json
output/xiuxian-ui-1980x1080-v1/normalized/: button-sheet-01-manifest.json  button-sheet-02-manifest.json  button-sheet-03-manifest.json  icon-effect-sheet-01-manifest.json  icon-nav-sheet-01-manifest.json  icon-nav-sheet-02-manifest.json  icon-status-sheet-01-manifest.json  panel-sheet-01-manifest.json  panel-sheet-02-manifest.json  panel-sheet-03-manifest.json
output/xiuxian-ui-1980x1080-v1/prompts/: button-sheet-01.md  button-sheet-02.md  button-sheet-03.md  icon-effect-sheet-01-alpha-matte.md  icon-effect-sheet-01.md  icon-nav-sheet-01.md  icon-nav-sheet-02.md  (+6 more)
samples/: ui-request-example.json  unity-layout-example.json
samples/native-alpha/: README.md
samples/p61-cross-style-matte/: README.md  bright-cartoon.json  dark-fantasy.json  sci-fi-holographic.json
samples/unknown-sheet/: README.md
skills/game-ui-asset-pipeline/: SKILL.md
(+123 files in other folders)
