[project]
name = "cuttingtool"
version = "0.15.0"
description = "Codex-first game UI asset production, QA, Unity sprite import, 9-slice inference, and prefab generation."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=12.0,<14",
  "numpy>=2.0,<3",
]

[tool.cuttingtool]
skill_source = "skills/game-ui-asset-pipeline"
skill_install = "C:/Users/Admin/.codex/skills/game-ui-asset-pipeline"
